--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://easy-bank.c89icaq4xhv5.us-east-1.rds.amazonaws.com/easy-bank
+    url: jdbc:mysql://localhost:3306/easy-bank?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
     username: root
     password: mh22xx01
   jpa:
-    show-sql: true
+    show-sql: false
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
