--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,6 +22,23 @@ services:
     volumes:
       - mysql-data-container:/var/lib/mysql
 
+  keycloak:
+    container_name: keyCloak-container
+    image: quay.io/keycloak/keycloak:latest
+    hostname: keyCloak-container
+    command:
+      - start-dev --http-port 8081
+    restart: always
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - '8081:8081'
+    expose:
+      - 8081
+    networks:
+      - easy-bank-network
+
 volumes:
   mysql-data-container:
 
